--- a/Makefile.in
+++ b/Makefile.in
@@ -332,6 +332,11 @@ pre_dist: bump_version
 	-@$(MAKE) run_autoconfig
 #	@(cd pike; $(MAKE) pre_dist)
 
+faked_pre_dist:
+	echo "test_build" > $(SRCDIR)/VERSION
+	-@$(MAKE) depend
+	-@$(MAKE) run_autoconfig
+
 dist: $(SRCDIR)/ChangeLog.gz $(SRCDIR)/ChangeLog.rxml.gz
 	@if test -f $(SRCDIR)/VERSION; then :; else \
 	  echo 'You need to make pre_dist first!'; \
