--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 #
-# $Id: configure.in,v 1.59 1998/10/16 20:28:25 grubba Exp $
+# $Id: configure.in,v 1.60 1998/11/06 00:04:56 grubba Exp $
 #
 
 prefix=$PWD
@@ -39,6 +39,7 @@ AC_ARG_WITH(pike,                 [  --with-pike                      Specify ve
 AC_ARG_WITH(poll,                 [  --with-poll                      Use poll(2) instead of select(2)])
 AC_ARG_WITH(postgres,             [  --with(out)-postgres             Postgres95 DB server support])
 AC_ARG_WITH(postgres-include-dir, [  --with-postgres-include-dir=dir  Look for header-files in dir])
+AC_ARG_WITH(prefix,	          [  --with-prefix                    Set the installation prefix],[prefix=$with_prefix],[])
 AC_ARG_WITH(profiling,            [  --with-profiling                 Add code used to profile pike code ])
 AC_ARG_WITH(readline,             [  --without-readline               No support for command line editing])
 AC_ARG_WITH(rtldebug,             [  --with-rtldebug                  Enable run-time level debug],[],[with_rtldebug=no])
@@ -50,6 +51,49 @@ AC_ARG_WITH(zlib,                 [  --with(out)-zlib                 Support gz
 
 # Make sure with_rtldebug is propagated to the other configure-scripts.
 export with_rtldebug
+
+
+#
+# Early summary:
+#
+
+echo
+echo Configuring Roxen...
+echo
+
+# We want an absolute path to the source-dir.
+case "$srcdir" in
+    /*)
+    ;;
+    *)
+	oldsrcdir="$srcdir"
+	srcdir="`cd \"$srcdir\";pwd`"
+	AC_MSG_WARN([ Converted $oldsrcdir to $srcdir,
+If this does not work, please use an absolute path to the configure script. ])
+    ;;
+esac
+echo Source directory:       "$srcdir"
+
+# We also want an absolute path to the installation prefix.
+case "$prefix" in
+    /*)
+    ;;
+    NONE*)
+      prefix="$ac_default_prefix"
+    ;;
+    *)
+	oldprefix="$prefix"
+	prefix="`cd \"$prefix\";pwd`"
+	AC_MSG_WARN([ Converted $oldprefix to $prefix,
+If this does not work, please specify an absolute path as the prefix. ])
+    ;;
+esac
+echo Installation directory: "$prefix"
+echo
+
+#
+# Begin the actual configuration...
+#
 
 AC_SET_MAKE
 
@@ -85,19 +129,6 @@ case "$ac_cv_path_install" in
     fi
   ;;
 esac
-
-# We want an absolute path to the source-dir.
-case "$srcdir" in
-    /*)
-    ;;
-    *)
-	oldsrcdir="$srcdir"
-	srcdir="`cd \"$srcdir\";pwd`"
-	AC_MSG_WARN([ Converted $oldsrcdir to $srcdir,
-If this does not work, please use an absolute path to the configure script. ])
-    ;;
-esac
-
 
 #
 # Version of Pike
