--- a/.cvsignore
+++ b/.cvsignore
@@ -1,14 +1,15 @@
-gtext_cache
-ChangeLog.gz
-ChangeLog.rxml.gz
-configurations
-Makefile
+build
 config.cache
 config.log
 config.status
 config.h.in
+configurations
+configure
+gtext_cache
+local
 logs
 ulpc
-configure
-build
+ChangeLog.gz
+ChangeLog.rxml.gz
+Makefile
 VERSION
