--- a/.gitignore
+++ b/.gitignore
@@ -30,17 +30,18 @@ _$*
 *.elc
 *.ln
 core
-/gtext_cache
-/ChangeLog.gz
-/ChangeLog.rxml.gz
-/configurations
-/Makefile
+/build
 /config.cache
 /config.log
 /config.status
 /config.h.in
+/configurations
+/configure
+/gtext_cache
+/local
 /logs
 /ulpc
-/configure
-/build
+/ChangeLog.gz
+/ChangeLog.rxml.gz
+/Makefile
 /VERSION
