ssl3.pike renamed https.pike.
Rev: server/protocols/https.pike:1.1
Rev: server/protocols/ssl3.pike:1.44(DEAD)

--- a/.gitattributes
+++ b/.gitattributes
@@ -236,7 +236,7 @@ urw_itc_avant_garde-demi-r binary
 /server/protocols/ftp2.pike foreign_ident
 /server/protocols/gopher.pike foreign_ident
 /server/protocols/http.pike foreign_ident
-/server/protocols/ssl3.pike foreign_ident
+/server/protocols/https.pike foreign_ident
 /server/protocols/tetris.pike foreign_ident
 /server/roxen-images/auto/README foreign_ident
 /server/server_templates/bare.pike foreign_ident
