addfp98.pike -- Mike Knott's script to fake an Apache config file for                 FrontPage98.
Rev: tools/addfp98.pike:1.1

--- a/.gitattributes
+++ b/.gitattributes
@@ -251,5 +251,6 @@ urw_itc_avant_garde-demi-r binary
 /server/unfinishedmodules/hedbor.pike foreign_ident
 /server/unfinishedmodules/mountserver.pike foreign_ident
 /server/unfinishedmodules/whois++.pike foreign_ident
+/tools/addfp98.pike foreign_ident
 /tools/convert_accessed.pike foreign_ident
 /tools/roxenstarter/roxenstarter.cpp foreign_ident
