--- a/configure.in
+++ b/configure.in
@@ -1,5 +1,5 @@
 #
-# $Id: configure.in,v 1.58 1998/12/07 22:47:44 grubba Exp $
+# $Id: configure.in,v 1.59 1998/12/09 22:35:26 grubba Exp $
 #
 
 prefix=$PWD
@@ -638,15 +638,15 @@ if test -d $srcdir/gdbm/.; then
 fi
 
 #
-# Commercial modules?
+# Platform
 #
 
 MAKE_COM=""
 AC_SUBST(MAKE_COM)
-if test -d $srcdir/commercial_modules/.; then
-  echo Enabling supplied commercial modules...
-  MAKE_COM=commercial_modules
-  roxen_lib_subdirs="$roxen_lib_subdirs commercial_modules"
+if test -d $srcdir/platform/.; then
+  echo Enabling platform...
+  MAKE_COM=platform
+  roxen_lib_subdirs="$roxen_lib_subdirs platform"
 else :; fi
 
 #
