--- a/Makefile.in
+++ b/Makefile.in
@@ -345,8 +345,7 @@ faked_pre_dist:
 	-@$(MAKE) depend
 	-@$(MAKE) run_autoconfig
 
-dist_files_and_type:
-	$(SRCDIR)/ChangeLog.gz $(SRCDIR)/ChangeLog.rxml.gz
+dist:	$(SRCDIR)/ChangeLog.gz $(SRCDIR)/ChangeLog.rxml.gz
 	@if test -f $(SRCDIR)/VERSION; then :; else \
 	  echo 'You need to make pre_dist first!'; \
 	  exit 1; \
@@ -408,9 +407,7 @@ dist_files_and_type:
 	  type="platform-$$type"; \
 	else :; fi; \
 	echo Type $$type.; \
-
-
-dist:	dist_files_and_type
+	dist_files_and_type
 	echo Building full NDA distribution...; \
 	tar cf - $$version | gzip -9 >$$version-$$type-nda-full.tar.gz; \
 	if (cd $$version; make keep_dbapi || exit 1); then \
