First version by Piotr Klaban <makler@man.torun.pl>.
Rev: server/languages/polish.pike:1.1

--- a/.gitattributes
+++ b/.gitattributes
@@ -153,6 +153,7 @@ urw_itc_avant_garde-demi-r binary
 /server/languages/japanese.pike foreign_ident
 /server/languages/maori.pike foreign_ident
 /server/languages/norwegian.pike foreign_ident
+/server/languages/polish.pike foreign_ident
 /server/languages/portuguese.pike foreign_ident
 /server/languages/russian.pike foreign_ident
 /server/languages/serbian.pike foreign_ident
