Hopefully fixed bug in arg "any" handling.
Rev: pike-modules/IMAP.pmod/requests.pmod:1.17

--- a/.gitattributes
+++ b/.gitattributes
@@ -35,3 +35,4 @@
 /modules/protocols/pop3.pike foreign_ident
 /modules/protocols/smtp.pike foreign_ident
 /pike-modules/IMAP.pmod/imap_server.pike foreign_ident
+/pike-modules/IMAP.pmod/requests.pmod foreign_ident
