--- a/Makefile.in
+++ b/Makefile.in
@@ -15,7 +15,7 @@ LDFLAGS=@LDFLAGS@
 
 PIKEVERSION=@PIKEVERSION@
 
-all:	make_vpath @MAKE_GMP@ @MAKE_GDBM@ @MAKE_ZLIB@ @MAKE_PLATFORM@ pike extern
+all:	make_vpath strip_manual @MAKE_GMP@ @MAKE_GDBM@ @MAKE_ZLIB@ @MAKE_PLATFORM@ pike extern
 
 make_vpath: make_vpath.in
 	@touch $(SRCDIR)/make_vpath
@@ -40,6 +40,19 @@ make_vpath: make_vpath.in
 	@echo
 	@echo "Applied VPATH workaround"
 	@echo
+
+strip_manual: force
+	@cd $(SRCDIR) && \
+	  test -d plaform/. || \
+	    if test -d server/manual/.; then \
+	      echo "Removing excess manual"; \
+	      rm -rf server/manual/unparsed/*1.0; \
+	      grep -v 1.0 server/manual/unparsed/CVS/Entries > e.tmp \
+	      mv -f e.tmp server/manual/unparsed/CVS/Entries \
+	      rm -rf server/manual/parsed/*1.0; \
+	      grep -v 1.0 server/manual/parsed/CVS/Entries > e.tmp \
+	      mv -f e.tmp server/manual/parsed/CVS/Entries \
+	    else :; fi;
 
 pike: force
 	@(cd pike/$(PIKEVERSION)/src;$(MAKE) "prefix=$(prefix)" "CC=$(CC)" "LDFLAGS=$(LDFLAGS) @LINKFORSHARED@")
