--- a/Makefile.in
+++ b/Makefile.in
@@ -47,11 +47,11 @@ strip_manual: force
 	    if test -d server/manual/.; then \
 	      echo "Removing excess manual"; \
 	      rm -rf server/manual/unparsed/*1.0; \
-	      grep -v 1.0 server/manual/unparsed/CVS/Entries > e.tmp \
-	      mv -f e.tmp server/manual/unparsed/CVS/Entries \
+	      grep -v 1.0 server/manual/unparsed/CVS/Entries > e.tmp; \
+	      mv -f e.tmp server/manual/unparsed/CVS/Entries; \
 	      rm -rf server/manual/parsed/*1.0; \
-	      grep -v 1.0 server/manual/parsed/CVS/Entries > e.tmp \
-	      mv -f e.tmp server/manual/parsed/CVS/Entries \
+	      grep -v 1.0 server/manual/parsed/CVS/Entries > e.tmp; \
+	      mv -f e.tmp server/manual/parsed/CVS/Entries; \
 	    else :; fi;
 
 pike: force
