--- a/Makefile.in
+++ b/Makefile.in
@@ -315,7 +315,7 @@ bump_version: bump_version.stamp
 	else : ; fi
 	@(cd $(SRCDIR); \
 	  echo Updating sources...; \
-	  if cvs -q update -dA|egrep '^[CM?]'; then exit 1; else : ; fi; \
+	  if cvs -q update -d|egrep '^[CM?]'; then exit 1; else : ; fi; \
 	)
 	@for d in $(SRCDIR)/pike/0.5 $(SRCDIR)/pike/0.6; do \
 	  if test -f $$d/src/version.c; then \
