What would you think this Makefile expands to in !gmake?:
---8<--------------------------
# Comment \

force:
	/bin/true
---8<--------------------------

The result came as sort of a surprise:

---8<--------------------------
# Comment force:
	 /bin/true
---8<-------------------------

Rev: Makefile.in:1.113

--- a/Makefile.in
+++ b/Makefile.in
@@ -22,8 +22,8 @@ all:	strip_manual @MAKE_GMP@ @MAKE_GDBM@ @MAKE_ZLIB@ @MAKE_PLATFORM@ pike extern
 	-@$(BIN_TRUE)
 
 strip_manual: force
-	@cd $(SRCDIR) && \
-	  test -d plaform/. || \
+	@cd $(SRCDIR); \
+	  test -d platform/. || \
 	    if test -d server/manual/.; then \
 	      echo "Removing excess manual"; \
 	      rm -rf server/manual/unparsed/*1.0; \
@@ -53,7 +53,7 @@ zlib: force
 #platform: force
 #	@if test -d platform/. ; then \
 #	  (cd platform/;$(MAKE)) \
-#	else :; fi; \
+#	else :; fi;
 
 force:
 	-@$(BIN_TRUE)
