Proxy status monitor by Wilhelm Köhler
Rev: server/config_actions/proxystatus.pike:1.1

--- a/.gitattributes
+++ b/.gitattributes
@@ -110,6 +110,7 @@ urw_itc_avant_garde-demi-r binary
 /server/config_actions/proc.pike foreign_ident
 /server/config_actions/processstatus.pike foreign_ident
 /server/config_actions/profile.pike foreign_ident
+/server/config_actions/proxystatus.pike foreign_ident
 /server/config_actions/quick_config.pike foreign_ident
 /server/config_actions/reloadconfiginterface.pike foreign_ident
 /server/config_actions/reloadconfigurations.pike foreign_ident
