--- a/Makefile.in
+++ b/Makefile.in
@@ -217,12 +217,11 @@ install_only:
 	else :; fi
 	@if test -d $(SRCDIR)/server/manual ; then \
 	  echo "Installing manual..."; \
-	  mkdir $(prefix)/roxen/server/manual; \
 	  cd $(prefix)/roxen/server/manual; \
           tar xf $(SRCDIR)/server/manual/parsed.tar; \
           tar xf $(SRCDIR)/server/manual/unparsed.tar; \
-	  rm $(SRCDIR)/server/manual/parsed.tar; \
-	  rm $(SRCDIR)/server/manual/unparsed.tar; \
+	  rm parsed.tar; \
+	  rm unparsed.tar; \
 	else :; fi
 	@echo "Roxen installed."
 
